clear fixes and improvements